# OxiSentinel

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.js  npm-workspace.yaml  package.json  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: check-oxisentinel.yml  codeql.yml
deploy/helm/oxisentinel-analyzer/: Chart.yaml
deploy/helm/oxisentinel-gateway-controller/: Chart.yaml  values.yaml
deploy/observability/: prometheus.yml
docs/: Architecture.md  Configuration.md
docs/example/: analyzer.toml  service.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: runtime_description.rs
kernel-extension/: README.md  install.sh  verify.sh
kernel-extension/templates/limits.d/: 90-oxisentinel.conf
kernel-extension/templates/sysctl.d/: 90-oxisentinel.conf
source/: Cargo.toml
source/assets/: README.md
source/config/: oxisentinel.toml
source/ops/: Dockerfile  build-image.sh
source/src/: image_targets.rs  lib.rs  main.rs  runtime.rs
source/src/admin/: mod.rs
source/src/condition/: config.rs  error.rs  methods.rs  mod.rs  runtime.rs  tests.rs
source/src/config/: mod.rs
source/src/diagnostics/: mod.rs
source/src/judgment/: config.rs  mod.rs  runtime.rs  tests.rs
source/src/parser/: application.rs  journal.rs  json.rs  mod.rs  normalized.rs  openapi.rs  provider.rs  tests.rs  text.rs  transport.rs
tests/: README.md
tests/docker/: README.md  control-smoke.sh  journald-smoke.sh  parse-smoke.sh  parser-unit-smoke.sh
tests/fixtures/oxisentinel-docker-integration-matrix/: README.md
tests/rust/: analyzer_runtime.rs  workspace_structure.rs
tests/scripts/: check-workspace-layout.sh
ui/console/: package.json  tsconfig.json
ui/console/source/: index.ts
(+12 files in other folders)
