[package]
name = "oxisentinel"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
publish = false

[features]
default = []
fuzzing = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bin]]
name = "oxisentinel"
path = "src/main.rs"

[[bin]]
name = "oxisentinelctl"
path = "src/bin/oxisentinelctl.rs"

[[test]]
name = "analyzer_runtime"
path = "../tests/rust/analyzer_runtime.rs"
